# Python-ZJXU

./: .gitignore  pyproject.toml
exp10/: highest_scores.xlsx  student_info.xlsx  student_scores.xlsx  task.py  thinking.py
exp11/: task1.py  thinking.py
exp12/: client.py  server.py
exp12/task1/: client.py  server.py
exp12/thinking/: client.py  server.py
exp13/: task1.py
exp14/: task1.py  thinking.py
exp15/task/: data_mock.py  task.py
exp15/thinking-facenet/: facenet.ipynb  facenet.py
exp15/thinking-facenet/nets/: facenet.py  facenet_training.py  inception_resnetv1.py  mobilenet.py
exp15/thinking-mnist/: mnist.ipynb
exp2/: task1.py  task2.py  task3.py  task4.py  task5.py  task6.py  task7.py
exp3/: task1.py  task2.py
exp4/: task1.py  task2.py  task3.py  task4.py  task5.py
exp5/: task1.py  task2(optional).py  task3(optional).py  thinking1.py  thinking2.py
exp6/: hanoi-non-recursion.py  hanoi.py
exp7/: task1.py  thinking1.py
exp8/: task1.py
exp9/: task1-new.py  task1.py  task2.py  thinking.py
