[project]
name = "python-zjxu"
version = "0.1.0"
description = ""
authors = [
    { name = "Nymphaea", email = "mail@supaku.cn" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "notebook (>=7.4.0,<8.0.0)",
    "scipy (>=1.10.1,<2.0.0)",
    "numpy (>=1.17.2,<2.0.0)",
    "opencv-python (>=4.1.2,<5.0.0)",
    "torch (>=1.2.0,<2.0.0)",
    "torchvision (>=0.4.0,<1.0.0)",
    "tqdm (>=4.60.0,<5.0.0)",
    "Pillow (>=8.2.0,<9.0.0)",
    "h5py (>=2.10.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
